Chapter 2 Final Source Code (Fully Working Sample)

--- a/Recipe 2/pom.xml
+++ b/Recipe 2/pom.xml
@@ -3,7 +3,6 @@
   <groupId>net.danielwind.effcaching</groupId>
   <artifactId>recipe2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
   
   <!-- Project Properties -->
   <properties>
@@ -48,15 +47,29 @@
     <tag>HEAD</tag>
     <url>https://github.com/danielwind/EhCache-Effective-Caching</url>
   </scm>
+  <repositories>
+	<repository>
+		<id>codehaus</id>
+		<url>http://repository.codehaus.org/org/codehaus</url>
+	</repository>
+  </repositories>
   <build>
   <finalName>recipe2</finalName>
    <plugins>
 	   <plugin>
 	    <artifactId>maven-compiler-plugin</artifactId>
-	    <version>3.0</version>
+	    <version>2.0.2</version>
 	    <configuration>
 	      <source>${jdk.version}</source>
 	      <target>${jdk.version}</target>
+	    </configuration>
+	   </plugin>
+	   <plugin>
+	    <groupId>org.codehaus.mojo</groupId>
+	    <artifactId>exec-maven-plugin</artifactId>
+	    <version>1.2.1</version>
+	    <configuration>
+	      <mainClass>net.danielwind.effcaching.recipe2.impl.Main</mainClass>
 	    </configuration>
 	   </plugin>
    </plugins>
@@ -78,22 +91,20 @@
 
   	<dependency>
         <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.6.1</version>
-        <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-jdk14</artifactId>
-        <version>1.6.1</version>
-        <scope>compile</scope>
-    </dependency>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.2</version>
+    </dependency> 
     <!-- Log4J -->
   	<dependency>
 		<groupId>log4j</groupId>
 		<artifactId>log4j</artifactId>
 		<version>${log4j.version}</version>
+	</dependency>
+	<!-- Jackson Mapper -->
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-asl</artifactId>
+		<version>1.8.5</version>
 	</dependency>
   </dependencies>
 </project>
