--- a/Recipe 3/pom.xml
+++ b/Recipe 3/pom.xml
@@ -3,14 +3,19 @@
   <groupId>net.danielwind.effcaching</groupId>
   <artifactId>recipe3</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   
   <!-- Project Properties -->
   <properties>
 		<junit.version>4.11</junit.version>
-		<jdk.version>1.7</jdk.version>
-		<ehcache.version>2.6.0</ehcache.version>
+		<jdk.version>1.6</jdk.version>
+		<ehcache.version>2.6.3</ehcache.version>
 		<log4j.version>1.2.17</log4j.version>
+		<hsqldb.version>1.8.0.10</hsqldb.version>
+		<spring.version>3.1.1.RELEASE</spring.version>
+		<jetty.version>6.1.10</jetty.version>
+		<servlet.version>2.5</servlet.version>
+		<gson.version>1.7.1</gson.version>
   </properties>
   
   <!--Project Information -->
@@ -59,6 +64,11 @@
 	      <target>${jdk.version}</target>
 	    </configuration>
 	   </plugin>
+	   <plugin>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>maven-jetty-plugin</artifactId>
+          <version>${jetty.version}</version>
+       </plugin>
    </plugins>
   </build>
   <dependencies>
@@ -71,29 +81,76 @@
   	
   	<dependency>
   		<groupId>net.sf.ehcache</groupId>
-  		<artifactId>ehcache</artifactId>
+  		<artifactId>ehcache-core</artifactId>
   		<version>${ehcache.version}</version>
-  		<type>pom</type>
   	</dependency>
 
   	<dependency>
         <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.6.1</version>
-        <scope>compile</scope>
-    </dependency>
-
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.2</version>
+    </dependency> 
+    
+    <!-- Servlet 2.5 API -->
     <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-jdk14</artifactId>
-        <version>1.6.1</version>
-        <scope>compile</scope>
-    </dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>${servlet.version}</version>
+	</dependency>
+	
+	<!-- Google GSON -->
+    <dependency>
+	<groupId>com.google.code.gson</groupId>
+	<artifactId>gson</artifactId>
+	<version>${gson.version}</version>
+  </dependency>
+    
     <!-- Log4J -->
   	<dependency>
 		<groupId>log4j</groupId>
 		<artifactId>log4j</artifactId>
 		<version>${log4j.version}</version>
 	</dependency>
+	
+	<!-- HSQLDB -->
+	<dependency>
+		<groupId>hsqldb</groupId>
+		<artifactId>hsqldb</artifactId>
+		<version>${hsqldb.version}</version>
+	</dependency>
+	
+	<!-- JSTL -->
+	<dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <scope>provided</scope>
+ 	</dependency>
+ 
+	<!-- Spring 3 dependencies -->
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<version>${spring.version}</version>
+	</dependency>
+   
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>${spring.version}</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-jdbc</artifactId>
+		<version>${spring.version}</version>
+	</dependency>
+	
   </dependencies>
 </project>
