--- a/Recipe 9/pom.xml
+++ b/Recipe 9/pom.xml
@@ -1,208 +1,203 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>net.danielwind.effcaching</groupId>
-  <artifactId>recipe9</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  
-  <!-- Project Properties -->
-  <properties>
-		<spring.version>3.1.0.RELEASE</spring.version>
-		<junit.version>4.11</junit.version>
-		<jdk.version>1.7</jdk.version>
-		<ehcache.version>2.6.0</ehcache.version>
-		<melody.version>1.32.1</melody.version>
-		<log4j.version>1.2.17</log4j.version>
-		<tomcat.version>7.0.34</tomcat.version>
-  </properties>
-  
-  <!--Project Information -->
-  <name>Recipe 9</name>
-  <description>EhCache Monitoring and Logging</description>
-  <url>https://github.com/danielwind/EhCache-Effective-Caching</url>
-  <inceptionYear>2013</inceptionYear>
-  <licenses>
-  	<license>
-  		<name>The MIT License (MIT) Copyright (c) 2012</name>
-  		<url>http://opensource.org/licenses/MIT</url>
-  		<distribution>repository</distribution>
-  		<comments>Open Source Distribution License</comments>
-  	</license>
-  </licenses>
-  <organization>
-  	<name>PacktPub Editorial</name>
-  	<url>http://www.packtpub.com</url>
-  </organization>
-  <developers>
-  	<developer>
-  		<id>daniel.wind</id>
-  		<name>Daniel Wind</name>
-  		<email>daniel.wind.m@gmail.com</email>
-  		<url>http://www.danielwind.net</url>
-  		<roles>
-  			<role>Architect</role>
-  			<role>Educator</role>
-  		</roles>
-  	</developer>
-  </developers>
-  <scm>
-    <connection>scm:git@github.com:danielwind/EhCache-Effective-Caching.git</connection>
-    <developerConnection>scm:git@github.com:danielwind/EhCache-Effective-Caching.git</developerConnection>
-    <tag>HEAD</tag>
-    <url>https://github.com/danielwind/EhCache-Effective-Caching</url>
-  </scm>
-  <build>
-  <finalName>recipe9</finalName>
-   <plugins>
-	   <plugin>
-	    <artifactId>maven-compiler-plugin</artifactId>
-	    <version>3.0</version>
-	    <configuration>
-	      <source>${jdk.version}</source>
-	      <target>${jdk.version}</target>
-	    </configuration>
-	   </plugin>
-	   <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>appassembler-maven-plugin</artifactId>
-            <version>1.1.1</version>
-            <configuration>
-                <assembleDirectory>target</assembleDirectory>
-                <programs>
-                    <program>
-                        <mainClass>net.danielwind.effcaching.chapter9.launch.Main</mainClass>
-                        <name>webapp</name>
-                    </program>
-                </programs>
-            </configuration>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>assemble</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-   </plugins>
-  </build>
-  <dependencies>
-  	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>${junit.version}</version>
-		<scope>test</scope>
-	</dependency>
-  	<dependency>
-  		<groupId>net.sf.ehcache</groupId>
-  		<artifactId>ehcache</artifactId>
-  		<version>${ehcache.version}</version>
-  		<type>pom</type>
-  	</dependency>
-  	<dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.6.1</version>
-        <scope>compile</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-jdk14</artifactId>
-        <version>1.6.1</version>
-        <scope>compile</scope>
-    </dependency>
-    <!-- Spring 3 dependencies -->
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-core</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
-	
-	<dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>${spring.version}</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context-support</artifactId>
-        <version>${spring.version}</version>
-    </dependency>
-    
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-web</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
+<?xml version="1.0" encoding="UTF-8"?>
 
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-webmvc</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
-    <!-- Log4J -->
-  	<dependency>
-		<groupId>log4j</groupId>
-		<artifactId>log4j</artifactId>
-		<version>${log4j.version}</version>
-	</dependency>
-	<!-- Java Melody -->
-	<dependency>
-		<groupId>net.bull.javamelody</groupId>
-		<artifactId>javamelody-core</artifactId>
-		<version>${melody.version}</version>
-	</dependency>
-	<!-- iText, PDF export -->
-    <dependency>
-            <groupId>com.lowagie</groupId>
-            <artifactId>itext</artifactId>
-            <version>2.1.7</version>
-            <exclusions>
-                    <exclusion>
-                            <artifactId>bcmail-jdk14</artifactId>
-                            <groupId>bouncycastle</groupId>
-                    </exclusion>
-                    <exclusion>
-                            <artifactId>bcprov-jdk14</artifactId>
-                            <groupId>bouncycastle</groupId>
-                    </exclusion>
-                    <exclusion>
-                            <artifactId>bctsp-jdk14</artifactId>
-                            <groupId>bouncycastle</groupId>
-                    </exclusion>
-            </exclusions>
-    </dependency>
-    <!-- embedded tomcat -->
-    <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-core</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-logging-juli</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-jasper</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jasper</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jasper-el</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jsp-api</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>         
-  </dependencies>
-</project>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>net.danielwind.effcaching</groupId>
+	<artifactId>recipe9</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<name>Recipe 9</name>
+
+	<properties>
+		<wicket.version>6.5.0</wicket.version>
+		<jetty.version>7.6.3.v20120416</jetty.version>
+		<ehcache.version>2.6.0</ehcache.version> 
+		<melody.version>1.32.1</melody.version>
+		<spring.version>3.1.1.RELEASE</spring.version>
+		<hsqldb.version>1.8.0.10</hsqldb.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	
+	<dependencies>
+		<!--  WICKET DEPENDENCIES -->
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-core</artifactId>
+			<version>${wicket.version}</version>
+		</dependency>
+		
+		<!-- Integrate Wicket with Spring -->
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-spring</artifactId>
+			<version>${wicket.version}</version>
+		</dependency>
+ 
+		<!-- Spring framework -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- LOGGING DEPENDENCIES - LOG4J -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.4</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
+
+		<!--  JUNIT DEPENDENCY FOR TESTING -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!--  JETTY DEPENDENCIES FOR TESTING  -->
+		<dependency>
+			<groupId>org.eclipse.jetty.aggregate</groupId>
+			<artifactId>jetty-all-server</artifactId>
+			<version>${jetty.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<!-- EHCACHE DEPENDENCIES -->
+		<dependency>
+	  		<groupId>net.sf.ehcache</groupId>
+	  		<artifactId>ehcache-core</artifactId>
+	  		<version>${ehcache.version}</version>
+  		</dependency> 
+  		
+		<!-- HSQLDB -->
+		<dependency>
+			<groupId>hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>${hsqldb.version}</version>
+		</dependency>
+		
+		<!-- JAVA MELODY DEPENDENCIES -->
+		<dependency>
+			<groupId>net.bull.javamelody</groupId>
+			<artifactId>javamelody-core</artifactId>
+			<version>${melody.version}</version>
+		</dependency>
+		
+		<!-- ITEXT PDF REPORT DEPENDENCIES -->
+	    <dependency>
+	            <groupId>com.lowagie</groupId>
+	            <artifactId>itext</artifactId>
+	            <version>2.1.7</version>
+	            <exclusions>
+	                    <exclusion>
+	                            <artifactId>bcmail-jdk14</artifactId>
+	                            <groupId>bouncycastle</groupId>
+	                    </exclusion>
+	                    <exclusion>
+	                            <artifactId>bcprov-jdk14</artifactId>
+	                            <groupId>bouncycastle</groupId>
+	                    </exclusion>
+	                    <exclusion>
+	                            <artifactId>bctsp-jdk14</artifactId>
+	                            <groupId>bouncycastle</groupId>
+	                    </exclusion>
+	            </exclusions>
+	    </dependency>
+		
+	</dependencies>
+	<build>
+	    <finalName>recipe9</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**</include>
+				</includes>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<inherited>true</inherited>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+					<showWarnings>true</showWarnings>
+					<showDeprecation>true</showDeprecation>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>${jetty.version}</version>
+				<configuration>
+					<connectors>
+						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+							<port>8080</port>
+							<maxIdleTime>3600000</maxIdleTime>
+						</connector>
+					</connectors>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<repositories>
+		<repository>
+			<id>Apache Nexus</id>
+			<url>https://repository.apache.org/content/repositories/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	</project>
