--- a/Recipe 12/pom.xml
+++ b/Recipe 12/pom.xml
@@ -3,16 +3,14 @@
   <groupId>net.danielwind.effcaching</groupId>
   <artifactId>recipe12</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
   
   <!-- Project Properties -->
   <properties>
-		<spring.version>3.1.0.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<jdk.version>1.7</jdk.version>
 		<ehcache.version>2.6.3</ehcache.version>
 		<log4j.version>1.2.17</log4j.version>
-		<tomcat.version>7.0.34</tomcat.version>
+		<slf4j.version>1.7.2</slf4j.version>
   </properties>
   
   <!--Project Information -->
@@ -61,28 +59,15 @@
 	      <target>${jdk.version}</target>
 	    </configuration>
 	   </plugin>
+	   
 	   <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>appassembler-maven-plugin</artifactId>
-            <version>1.1.1</version>
-            <configuration>
-                <assembleDirectory>target</assembleDirectory>
-                <programs>
-                    <program>
-                        <mainClass>net.danielwind.effcaching.recipe12.launch.Main</mainClass>
-                        <name>webapp</name>
-                    </program>
-                </programs>
-            </configuration>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>assemble</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+	    <groupId>org.codehaus.mojo</groupId>
+	    <artifactId>exec-maven-plugin</artifactId>
+	    <version>1.2.1</version>
+	    <configuration>
+	      <mainClass>net.danielwind.effcaching.recipe12.launch.Main</mainClass>
+	    </configuration>
+	   </plugin>
    </plugins>
   </build>
   <dependencies>
@@ -99,93 +84,20 @@
   		<version>${ehcache.version}</version>
   		<type>pom</type>
   	</dependency>
+  	
   	<dependency>
         <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.6.1</version>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>${slf4j.version}</version>
         <scope>compile</scope>
     </dependency>
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-jdk14</artifactId>
-        <version>1.6.1</version>
-        <scope>compile</scope>
-    </dependency>
-    <!-- JMS Replication Module -->
-  
-    <dependency>
-		<groupId>net.sf.ehcache</groupId>
-		<artifactId>ehcache-jmsreplication</artifactId>
-		<version>0.3</version>
-	</dependency>
-	
-
-    <!-- Spring 3 dependencies -->
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-core</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
-	<dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>${spring.version}</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context-support</artifactId>
-        <version>${spring.version}</version>
-    </dependency>
-    
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-web</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
-
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-webmvc</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
     <!-- Log4J -->
   	<dependency>
 		<groupId>log4j</groupId>
 		<artifactId>log4j</artifactId>
 		<version>${log4j.version}</version>
 	</dependency>
-    <!-- embedded tomcat -->
-    <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-core</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-logging-juli</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-jasper</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jasper</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jasper-el</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jsp-api</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>         
+            
   </dependencies>
   <repositories>
 	<repository>
